# MLEpractice

./: .gitignore  Makefile  READ.md  README.md  pyproject.toml  requirements.txt  src.sh
notebooks/: Untitled-1.ipynb  sample.db  tutorial.db
src/: test.py
