[tool.poetry]
name = "mlepractice"
version = "0.1.0"
description = "A setup example"
authors = ["Cem Gultekin, Goktug Asci"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
annotated-types = "0.5.0"
anyio = "3.7.1"
attrs = "23.1.0"
backports-zoneinfo = "0.2.1"
build = "0.10.0"
cachecontrol = "0.12.14"
certifi = "2023.7.22"
cffi = "1.15.1"
charset-normalizer = "3.2.0"
cleo = "2.0.1"
click = "8.1.7"
cloudpickle = "2.2.1"
crashtest = "0.4.1"
dask = "2023.5.0"
dask-sql = "2023.8.0"
distlib = "0.3.7"
distributed = "2023.5.0"
dulwich = "0.21.5"
exceptiongroup = "1.1.3"
fastapi = "0.101.1"
filelock = "3.12.2"
fsspec = "2023.6.0"
h11 = "0.14.0"
html5lib = "1.1"
httpcore = "0.17.3"
httpx = "0.24.1"
idna = "3.4"
importlib-metadata = "6.8.0"
importlib-resources = "6.0.1"
installer = "0.7.0"
jaraco-classes = "3.3.0"
jinja2 = "3.1.2"
jsonschema = "4.19.0"
jsonschema-specifications = "2023.7.1"
keyring = "23.13.1"
locket = "1.0.0"
lockfile = "0.12.2"
markupsafe = "2.1.3"
more-itertools = "10.1.0"
msgpack = "1.0.5"
numpy = "1.24.4"
packaging = "23.1"
pandas = "2.0.3"
partd = "1.4.0"
pexpect = "4.8.0"
pkginfo = "1.9.6"
pkgutil-resolve-name = "1.3.10"
platformdirs = "3.10.0"
poetry = "1.5.1"
poetry-core = "1.6.1"
poetry-plugin-export = "1.4.0"
prompt-toolkit = "3.0.39"
psutil = "5.9.5"
ptyprocess = "0.7.0"
pycparser = "2.21"
pydantic = "2.2.1"
pydantic-core = "2.6.1"
pygments = "2.16.1"
pyproject-hooks = "1.0.0"
python-dateutil = "2.8.2"
pytz = "2023.3"
pyyaml = "6.0.1"
rapidfuzz = "2.15.1"
referencing = "0.30.2"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rpds-py = "0.9.2"
shellingham = "1.5.3"
six = "1.16.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
sqlalchemy = "2.0.20"
starlette = "0.27.0"
tabulate = "0.9.0"
tblib = "2.0.0"
tomli = "2.0.1"
tomlkit = "0.12.1"
toolz = "0.12.0"
tornado = "6.3.3"
trove-classifiers = "2023.8.7"
typing-extensions = "4.7.1"
tzdata = "2023.3"
tzlocal = "5.0.1"
urllib3 = "1.26.16"
uvicorn = "0.23.2"
virtualenv = "20.24.3"
wcwidth = "0.2.6"
webencodings = "0.5.1"
xattr = "0.10.1"
zict = "3.0.0"
zipp = "3.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
