[tool.poetry]
name = "mlepractice"
version = "0.1.0"
description = "A setup example"
authors = ["Cem Gultekin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
numpy = "^1.25.2"
pandas = "^2.0.3"
boto3 = "^1.28.30"
torch = "2.0.0"
torchvision = "0.15.1"
awscli = "^1.29.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
